# numaware

./: .gitignore  NUMAWARE.md  met.csv  requirments.txt
joint_model/: .gitignore  README.md  pyproject.toml  requirements.txt
joint_model/models/: mg-model1.py
joint_model/notebooks/: 00.0-am-template.ipynb  data_cleaning.ipynb  split_data.ipynb
joint_model/notebooks/jm/: 0.01-jm-splitData.ipynb
joint_model/notebooks/mg/: 00.0-mg-dutilstest.ipynb  00.1-mg-tuttilstest.ipynb
joint_model/references/: links.md
joint_model/scripts/: 00.0-mg-workspace.ipynb  arm_script.py  augmentData.py  calibrationdata.npz  calibri.py  camCalibrationTest.py  camCalibrator.py  collect.py  dataTest.csv  data_cleaning.ipynb  data_split.ipynb  findcamera.py  forkScript.py  imgCalibrator.py  processed_data.csv  scripts.md  takeImage.py  test.py
joint_model/scripts/data_collection/: 00.0-mg-workspace.ipynb  calibri.py  collector.py
joint_model/scripts/data_collection/logi_calibration/: logi.npz
joint_model/src/: abb.py
joint_model/src/uafscs/: main.py  predict.py  train.py
joint_model/src/uafscs/configs/: defaults.py
joint_model/src/uafscs/models/: baseline.py  ct_models.py  experiment1.py  jm_models.py  mg_model1.py
joint_model/src/uafscs/utils/: batch_utils.py  console_utils.py  data_utils.py  metric_utils.py  metrics_utils.py  model_utils.py  train_utils.py
joint_model/src/uafscs_research_su24_testproject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
object_detection_model/: .gitignore  README.md  dockerfile  issues.md  pyproject.toml  requirements.txt
(+664 files in other folders)
